# python

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CNAME  LICENSE-BSD-3-CLAUSE-COMMONS-DEED-RU.txt  LICENSE-BSD-3-CLAUSE-COMMONS-DEED.txt  LICENSE-BSD-3-CLAUSE-LEGAL-CODE.txt  LICENSE-CC-BY-COMMONS-DEED-RU.txt  LICENSE-CC-BY-COMMONS-DEED.txt  LICENSE-CC-BY-LEGAL-CODE.txt  README-RU.md  README.md  chapter01.html  genindex.html  index.html  init.sh  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_colab.txt  search.html  searchindex.js  tmux.conf
.binder/: requirements.txt
_sources/: chapter01.ipynb  index.ipynb
_sources/info/: index.ipynb  typography.ipynb
algorithms/sorts/: README-RU.md  README.md  bead_sort.py  bead_sort_test.py  bubble_sort.py  bubble_sort_test.py
book/: _config.yml  _toc.yml  index.md
info/: index.html  typography.html
projects/: README-RU.md  README.md
projects/collatz_conjecture/: collatz_conjecture.ipynb  collatz_conjecture.md  collatz_conjecture.py  collatz_conjecture_ru.ipynb  collatz_conjecture_ru.md  syracuse_sequence_iterative.py  syracuse_sequence_iterative_test.py  syracuse_sequence_recursive.py  syracuse_sequence_recursive_test.py
projects/profilers/: profile_time.ipynb  profile_time.md  profile_time.py  profile_time_ru.ipynb  usage_time.md  (+13 more)
shorts/: README-RU.md  README.md
tasks/: assignment.md  binary_tree.md  bool.md  class.md  def.md  for_loop.md  if.md  int.md  linked_list.md  loop.md  nested_for_loop.md  stack.md  str.md  while_loop.md
tests/: venv_test.py
(+6 files in other folders)
