[tool.poetry]
name = "trypython"
version = "0.1.0"
description = "A collection of educational materials for learning the Python programming language"
authors = ["Alexander Krasnikov aka askras <askras@trypython.pro>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13,"
notebook = "^7.0.6"
jupytext = "^1.15.2"
matplotlib = "^3.8.1"
memory-profiler = "^0.61.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
bandit = "^1.7.5"
black = "^23.11.0"
mypy = "^1.5.1"
nbqa = "^1.7.0"
pre-commit = "^3.5.0"
pylint = "^3.0.2"
pytest = "^7.4.0"

[tool.jupytext]
formats = "ipynb,md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
